syntax = "proto3";

package archive;

import "journey.proto";

message Metadata {
    enum Kind {
        FULL_ARCHIVE = 0;
        PARTIAL_EXPORT = 1;
        GENERATED_FOR_IMPORT = 2;
    }
    message SectionInfo {
        string section_id = 1;
        uint32 num_of_journeys = 4;
    }

  int64 created_at_timestamp_sec = 1;
  repeated SectionInfo section_infos = 2;
  optional Kind kind = 3;
  optional string note = 4;
}

message SectionHeader {
    string section_id = 1;
    repeated journey.Header journey_headers = 2;
}