syntax = "proto3";

package journey;

message Header {
  message Kind {
    enum BuiltIn {
      DEFAULT = 0;
      FLIGHT = 1;
    }

    oneof Kind {
      string custom_kind = 1;
      BuiltIn build_in = 2;
    }
  }

  enum Type {
    Vector = 0;
    BITMAP = 1;
  }

  string id = 1;
  string revision = 2;
  int64 created_at_timestamp_sec = 3;
  optional int64 updated_at_timestamp_sec = 4;
  int64 end_timestamp_sec = 5;
  optional int64 start_timestamp_sec = 6;
  Type type = 7;
  Kind kind = 8;
  optional string note = 9;
}